[gd_scene load_steps=9 format=3 uid="uid://b34ds14ely577"]

[ext_resource type="Script" uid="uid://bfqqenwoqf3hc" path="res://scripts/menu.gd" id="1_l6cm7"]
[ext_resource type="Texture2D" uid="uid://bdxf7u7k8d7c5" path="res://assets/Screenshot_35.png" id="2_bqqt6"]
[ext_resource type="FontFile" uid="uid://ql8layomxqik" path="res://assets/Fonts/PixelOperator8-Bold.ttf" id="2_ekxnf"]
[ext_resource type="Texture2D" uid="uid://b1cj57xejy8ck" path="res://assets/Screenshot_36.png" id="3_wu84c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ekxnf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wu84c"]
bg_color = Color(0.633757, 0.633757, 0.633757, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.144063, 0.144063, 0.144063, 0.6)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ln24"]
bg_color = Color(0.259294, 0.259294, 0.259294, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.144063, 0.144063, 0.144063, 0.6)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekxnf"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.144063, 0.144063, 0.144063, 0.6)
shadow_size = 5

[node name="MainMenu" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -984.0
offset_top = 18.0
offset_right = -652.0
offset_bottom = 273.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.174533
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_bqqt6")
expand_mode = 2

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 471.0
offset_top = -16.0
offset_right = 836.0
offset_bottom = 334.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.174533
scale = Vector2(0.9, 0.9)
texture = ExtResource("3_wu84c")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -141.0
offset_top = -79.0
offset_right = 142.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Start Game" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ekxnf")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_wu84c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/normal = SubResource("StyleBoxFlat_ekxnf")
text = "Start Game"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ekxnf")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_wu84c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/normal = SubResource("StyleBoxFlat_ekxnf")
text = "Options"

[node name="Exit Game" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ekxnf")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_wu84c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/normal = SubResource("StyleBoxFlat_ekxnf")
text = "Exit Game"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -415.0
offset_top = 146.0
offset_right = 427.0
offset_bottom = 195.0
grow_horizontal = 2
rotation = -0.0872665
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_ekxnf")
theme_override_font_sizes/font_size = 45
text = "Kanzi's Great Escape"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Start Game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit Game" to="." method="_on_exit_game_pressed"]
